--- a/index.html
+++ b/index.html
@@ -14,22 +14,8 @@
   </head>
   <body>
     <div class="container mx-auto">
-      <nav aria-label="...">
-        <ul class="pagination">
-          <li class="page-item disabled">
-            <a class="page-link">Previous</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">1</a>
-          </li>
-          <li class="page-item active" aria-current="page">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-          </li>
-        </ul>
-      </nav>
+      <button id="first-btn">Pagina uno</button>
+      <button id="second-btn">Pagina due</button>
     </div>
 
     <div id="element-container" class="container"></div>
